<resources>
    <string name="cc_address_">Address</string>
    <string name="cc_phone">Phone Number</string>
    <string name="cc_center_id">Center ID</string>
    <string name="cc_title">Nearest Collection Center</string>
    <string name="pay_settings">Settings</string>
    <string name="pd_save">Save Details</string>
    <string name="pd_ifsc">IFSC Code</string>
    <string name="pd_acc_hol_name">Account Holder Name</string>
    <string name="pd_acc_no">Account Number</string>
    <string name="pd_bank_details">Bank Details</string>
    <string name="pd_verify">Verify</string>
    <string name="pd_title">Payment Details</string>
    <string name="empty_cart">Your cart is Empty</string>
    <string name="app_name">FreshOk Kisan</string>
    <string name="Rs">\u20B9</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="book_slot">Book Slot</string>
    <string name="manual">Manual</string>
    <string name="cc_address">CC Address</string>
    <string name="date">Date</string>
    <string name="free_home_pickup">Free Home Pickup</string>
    <string name="address">Address</string>
    <string name="add_new_address">Add new Address</string>
    <string name="place_request">Place Request</string>
    <string name="cart">Cart</string>
    <string name="cart_item_removed">Item Removed</string>
    <string name="cart_minimum_message">Minimum limit reached</string>
    <string name="cart_maximum_message">Maximum limit reached</string>
    <string name="coupon_available">Coupon Available</string>
    <string name="applied">Apply</string>
    <string name="coupon">Coupon</string>
    <string name="tax_and_charges">Tax and Charges</string>
    <string name="transportaion_and_labour">Transportation and Labour</string>
    <string name="total">Total</string>
    <string name="book_slot_button">Book Slot</string>
    <string name="choose_language">Choose Language</string>
    <string name="mobile_number_hint">Mobile Number</string>
    <string name="login_or_register">Login or Register</string>
    <string name="locating">Locating...</string>
    <string name="profile_name_hint">Name</string>
    <string name="profile_kyc_hint">XXXXXXXX (Optional)</string>
    <string name="profile_alternate_mobile_no">Alternate Mobile No.</string>
    <string name="profile_address_hint">Address</string>
    <string name="profile_address">Address</string>
    <string name="profile_name">Name</string>
    <string name="profile_kyc">KYC</string>
    <string name="profile_verified">verified</string>
    <string name="profile_mr">Mr.</string>
    <string name="profile_contact">Contact</string>
    <string name="profile_save_changes">Save Changes</string>
    <string name="profile_saving">Saving...</string>
    <string name="requests">Requests</string>
    <string name="request">Request</string>
    <string name="request_no_requests">No Requests</string>
    <string name="request_sell_request">Sell Request</string>
    <string name="request_slot">Slot :</string>
    <string name="request_item">Item</string>
    <string name="request_quantity">Quantity</string>
    <string name="request_price">Price</string>
    <string name="request_cancel_title">Cancel Request</string>
    <string name="request_cancel_message">Are you sure you want to cancel the Request?</string>
    <string name="request_cancel_positive">Yes</string>
    <string name="request_cancel_negative">No</string>
    <string name="request_call_executive">You can call our executive for further information</string>
    <string name="request_cancel_request">Cancel Request</string>
    <string name="request_cancelled">Cancelled</string>
    <string name="request_cancelling">Cancelling...</string>
    <string name="search_query_hint">Search</string>
    <string name="search_toolbar_title">FreshHut</string>
    <string name="select_crops">Select Crops</string>
    <string name="select_crops_next">Next</string>
    <string name="sell_query_hint">Search</string>
    <string name="sell_fruits">Sell Fruits</string>
    <string name="sell_vegetables">Sell Vegetables</string>
    <string name="splash_title">FRESHOk</string>
    <string name="otp_resend">Resend OTP</string>
    <string name="otp_verify">Verify</string>
    <string name="otp_title_part_1">FRESH</string>
    <string name="otp_title_part_2">OK</string>
    <string name="address_sheet_location_empty">Your Location is Unavailable</string>
    <string name="address_sheet_current_location">Current Location</string>
    <string name="address_sheet_address_line_1_hint">Address Line 1</string>
    <string name="address_sheet_address_line_2_hint">Address Line 2</string>
    <string name="address_sheet_landmark_hint">Landmark</string>
    <string name="address_sheet_city_hint">AddressCity</string>
    <string name="address_sheet_state_hint">State</string>
    <string name="address_sheet_pincode_hint">Pincode</string>
    <string name="address_sheet_confirm_location">Confirm Location</string>
    <string name="change_quantity_sheet_update">Update</string>
    <string name="change_quantity_remove">Remove</string>
    <string name="change_quantity_quantity_hint">Quantity</string>
    <string name="main_location_empty">Your Location is Unavailable</string>
    <string name="main_current_location">Current Location</string>
    <string name="main_query_hint">Search</string>
    <string name="main_vegetables_off">Vegetables\n 50% EXTRA</string>
    <string name="main_fruits_off">Fruits\n 40% EXTRA</string>
    <string name="main_crops_off">Crops\n 35% EXTRA</string>
    <string name="main_sell_fruits">Sell Fruits</string>
    <string name="main_sell_vegetables">Sell Vegetables</string>
    <string name="main_sell_crops">Sell Crops</string>
    <string name="main_max_limit_reached">Maximum Limit reached</string>
    <string name="main_suggested_for_you">Suggested For You</string>
    <string name="payment_no_payment">No Payments</string>
    <string name="register_address">Address</string>
    <string name="register_address_line_1_hint">Address Line 1</string>
    <string name="register_address_line_2_hint">Address Line 2</string>
    <string name="register_landmark_hint">Landmark (Optional)</string>
    <string name="register_pincode_hint">Pincode</string>
    <string name="register_your_location">Your Location</string>
    <string name="register_next">Next</string>
    <string name="register_details">Details</string>
    <string name="register_name_hint">Name</string>
    <string name="register_alternate_mob_hint">Alternate Number (Optional)</string>
    <string name="register_skip">Skip</string>
    <string name="register_profile_photo">Profile Photo</string>
    <string name="request_list_date">Request Date</string>
    <string name="request_list_sell_status">Sell Status</string>
    <string name="request_list_request_id">Request Id</string>
    <string name="request_list_collection">Collection</string>
    <string name="request_list_slot">Slot</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="no_gps_message">Please turn on location.</string>
    <string name="menu_home">Home</string>
    <string name="menu_requests">Requests</string>
    <string name="menu_payments">Payments</string>
    <string name="menu_about">About</string>
    <string name="menu_change_langauge">Change Language</string>
    <string name="menu_logout">Logout</string>
    <string name="payments">Payments</string>
</resources>