<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="30dp"
    app:cardElevation="4dp"
    android:layout_marginVertical="10dp"
    android:layout_marginHorizontal="20dp">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="20dp"
        android:paddingTop="10dp"
        android:paddingBottom="30dp">
        <TextView
            android:id="@+id/req_date_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:text="@string/request_list_date"
            android:textColor="#bebebe"
            android:textSize="10sp"/>
        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/req_date_text"
            android:textColor="#424242"
            android:textSize="16sp"
            android:text="Mar 13"/>
        <TextView
            android:id="@+id/sell_status_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:text="@string/request_list_sell_status"
            android:textColor="#bebebe"
            android:textSize="10sp"/>
        <TextView
            android:id="@+id/status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/sell_status_text"
            android:layout_alignParentRight="true"
            android:textColor="#70c7b7"
            android:textSize="16sp"
            android:text="Mar 13"/>
        <TextView
            android:id="@+id/req_id_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/date"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="5dp"
            android:textColor="#70c7b7"
            android:textSize="10sp"
            android:text="@string/request_list_request_id"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/date"
            android:layout_centerInParent="true"
            android:layout_marginTop="20dp"
            android:textColor="#70c7b7"
            android:textSize="10sp"
            android:text="Collection"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/date"
            android:layout_alignParentRight="true"
            android:layout_marginTop="20dp"
            android:layout_marginRight="25dp"
            android:textColor="#70c7b7"
            android:textSize="10sp"
            android:text="@string/request_list_slot"/>
        <ImageView
            android:id="@+id/line"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/green_line"
            android:layout_marginTop="3dp"
            android:layout_below="@+id/req_id_text"/>
        <TextView
            android:id="@+id/req_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/line"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="5dp"
            android:textColor="#505050"
            android:textSize="12sp"
            android:text="24888"/>
        <TextView
            android:id="@+id/request_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/line"
            android:layout_centerInParent="true"
            android:layout_marginTop="10dp"
            android:textColor="#505050"
            android:textSize="12sp"
            android:text="@string/request_list_collection"/>
        <TextView
            android:id="@+id/slot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/line"
            android:layout_alignParentRight="true"
            android:layout_marginRight="5dp"
            android:layout_marginTop="10dp"
            android:textColor="#505050"
            android:textSize="12sp"
            android:text="7am-8pm"/>
    </RelativeLayout>
</androidx.cardview.widget.CardView>