<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="com.farmerapp.Activities.RequestDetailActivity">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@drawable/gradient"
        app:contentInsetEnd="0dp"
        app:contentInsetLeft="0dp"
        app:contentInsetRight="0dp"
        app:contentInsetStart="0dp"
        android:layout_alignParentTop="true">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:onClick="onBackClick"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_arrow_back_50dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:layout_alignParentLeft="true"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/request"
            android:textColor="@color/white"
            android:textSize="20sp"/>
    </RelativeLayout>
    </androidx.appcompat.widget.Toolbar>
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:layout_above="@+id/call_exe_text"
        android:requiresFadingEdge="vertical"
        android:fadingEdgeLength="50dp">
        <RelativeLayout
            android:id="@+id/rl_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:id="@+id/sell_request_ll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="30dp"
                android:layout_alignParentTop="true"
                android:gravity="center_horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/request_sell_request"
                    android:textSize="30sp"
                    android:textColor="#616161"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/sell_request_status"
                    android:text="Confirmed"
                    android:textSize="30sp"
                    android:layout_marginLeft="10dp"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/slot_ll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/sell_request_ll"
                android:gravity="center_horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/request_slot"
                    android:textSize="17sp"
                    android:textColor="#616161"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/slot_status"
                    android:text="Confirmed"
                    android:textSize="17sp"
                    android:layout_marginLeft="10dp"/>
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="date"
                android:id="@+id/date"
                android:textColor="#424242"
                android:textSize="17sp"
                android:layout_marginTop="5dp"
                android:layout_below="@+id/slot_ll"
                android:gravity="center_horizontal"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="slot"
                android:id="@+id/slot"
                android:textColor="#a1a1a1"
                android:textSize="16sp"
                android:lineHeight="22sp"
                android:layout_marginTop="5dp"
                android:layout_below="@+id/date"
                android:gravity="center_horizontal"/>
            <androidx.cardview.widget.CardView
                android:id="@+id/card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/slot"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="40dp"
                android:layout_marginHorizontal="40dp"
                app:cardCornerRadius="15dp"
                app:cardElevation="4dp">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="20dp">
                    <TextView
                        android:id="@+id/item_head"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/request_item"
                        android:layout_alignParentLeft="true"
                        android:textSize="17sp"
                        android:textColor="#70c7b7"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/request_quantity"
                        android:layout_centerHorizontal="true"
                        android:textSize="17sp"
                        android:textColor="#70c7b7"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/request_price"
                        android:layout_alignParentRight="true"
                        android:textSize="17sp"
                        android:textColor="#70c7b7"/>
                    <ImageView
                        android:id="@+id/line"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/item_head"
                        android:src="@drawable/green_line"
                        android:layout_marginTop="5dp"/>
                    <androidx.recyclerview.widget.RecyclerView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/recyler_view"
                        android:layout_below="@id/line"
                        android:layout_marginTop="10dp"/>
                </RelativeLayout>
            </androidx.cardview.widget.CardView>
        </RelativeLayout>
    </androidx.core.widget.NestedScrollView>
    <TextView
        android:id="@+id/call_exe_text"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:text="@string/request_call_executive"
        android:textColor="#a1a1a1"
        android:gravity="center"
        android:layout_above="@+id/cancel_request"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"/>
    <Button
        android:id="@+id/cancel_request"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/request_cancel_request"
        android:onClick="showConfirmationDialog"
        android:textColor="@color/white"
        android:paddingHorizontal="20dp"
        android:background="@drawable/roundbutton"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="25dp"/>
    <pl.droidsonroids.gif.GifImageView
        android:id="@id/load"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/load"
        android:layout_centerInParent="true"/>

</RelativeLayout>