<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.CollectionCentreActivity">
    <fragment
        android:id="@+id/map"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        class="com.google.android.gms.maps.SupportMapFragment"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:paddingTop="10dp"
        android:paddingBottom="30dp"
        android:paddingRight="30dp"
        android:elevation="7dp">
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_arrow_back_50dp_green"
            android:id="@+id/back"
            android:onClick="onBackClick"
            android:layout_marginLeft="15dp"
            />
        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cc_title"
            android:layout_centerHorizontal="true"
            android:layout_alignParentTop="true"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            android:layout_marginTop="7dp"/>
        <TextView
            android:id="@+id/centre_id_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cc_center_id"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="30dp"
            android:textSize="16sp"
            android:layout_below="@id/back"
            android:layout_marginTop="25dp"/>
        <TextView
            android:id="@+id/centre_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/back"
            android:layout_marginTop="25dp"
            android:textColor="@color/grey"
            android:text="544774"
            android:textSize="15sp"/>
        <TextView
            android:id="@+id/phone_num_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cc_phone"
            android:layout_marginLeft="30dp"
            android:layout_alignParentLeft="true"
            android:textSize="16sp"
            android:layout_below="@id/centre_id_text"
            android:layout_marginTop="10dp"/>
        <TextView
            android:id="@+id/phone_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/centre_id_text"
            android:layout_marginTop="10dp"
            android:textColor="@color/grey"
            android:text="8588989696"
            android:textSize="15sp"/>
        <TextView
            android:id="@+id/address_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cc_address_"
            android:layout_alignParentLeft="true"
            android:textSize="16sp"
            android:layout_marginLeft="30dp"
            android:layout_below="@id/phone_num_text"
            android:layout_marginTop="10dp"/>
        <TextView
            android:id="@+id/address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/phone_num_text"
            android:layout_marginTop="10dp"
            android:textColor="@color/grey"
            android:text="Opp Pkt-E Dilshad Garden"
            android:layout_toRightOf="@id/address_text"
            android:gravity="end"
            android:layout_marginLeft="90dp"
            android:textSize="15sp"/>
    </RelativeLayout>
</RelativeLayout>