<?xml version="1.0" encoding="utf-8"?>
<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingVertical="10dp"
    android:scrollbars="none"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">
    <androidx.cardview.widget.CardView
        android:layout_width="224dp"
        android:layout_height="121dp"
        android:layout_marginLeft="20dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp">
        <RelativeLayout
            android:id="@+id/veg_offer"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/vege"
                android:scaleType="centerCrop"/>
            <TextView
                android:layout_width="200dp"
                android:layout_height="match_parent"
                android:text="@string/main_vegetables_off"
                android:textSize="28sp"
                android:textColor="@color/white"
                android:paddingLeft="20dp"
                android:gravity="center_vertical" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="224dp"
            android:layout_height="121dp"
            android:layout_marginLeft="20dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp">
            <RelativeLayout
                android:id="@+id/fruit_offer"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/fruits"
                    android:scaleType="centerCrop"/>
                <TextView
                    android:layout_width="200dp"
                    android:layout_height="match_parent"
                    android:text="@string/main_fruits_off"
                    android:textSize="28sp"
                    android:textColor="@color/white"
                    android:paddingLeft="20dp"
                    android:gravity="center_vertical" />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="224dp"
            android:layout_height="121dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp">
            <RelativeLayout
                android:id="@+id/crop_offer"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/vege"
                    android:scaleType="centerCrop"/>
                <TextView
                    android:layout_width="200dp"
                    android:layout_height="match_parent"
                    android:text="@string/main_crops_off"
                    android:textSize="28sp"
                    android:textColor="@color/white"
                    android:paddingLeft="20dp"
                    android:gravity="center_vertical" />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>
</HorizontalScrollView>